add main section , button e start columns

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
     color: white;
     height: 30px;
     padding: 0 10px;
+    border: none;
 }
 .container{
     width: 1000px;
@@ -47,24 +48,23 @@ a{
     width: 100%;
 }
 .header-container-bottom > div{
-    margin-top: 50px;
+    padding-top: 50px;
     margin-left: 230px;
 }
 h1{
-    /* text-align: center; */
     font-size: 50px;
     line-height: 50px;
 }
 .container-info-header{
     display: flex;
     margin-top: 50px;
-    height: 240px;
+    height: 280px;
     width: 100%;
 }
 .left-header-bottom{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 40%;
 }
 .right-header-bottom{
@@ -72,7 +72,32 @@ h1{
 }
 .left-header-bottom > button{
     width: 40%;
+    padding-bottom: 0;
 }
 .right-header-bottom > * {
     width: 100%;   
+}
+/* main-section-1 */
+.first-section{
+    margin-top: 100px;
+}
+.button-first-section{
+    margin-top: 50px;
+}
+label{
+    margin-right: 35px;
+}
+.button-first-section input:checked {
+    border:10px solid #2196F3;
+}
+.columns-container-main{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.columns-box-main{
+    width: calc(90% / 3);
+}
+.item-columns{
+    text-align: center;
 }
