--- a/css/style.css
+++ b/css/style.css
@@ -131,8 +131,35 @@ label{
 }
 .info-columns > hr{
     width: 30%;
+    border-color: lightgray;
 }
 .info-columns > p{
     color: gray;
 }
-
+.footer-section1-item{
+    width: 100%;
+    margin-top: 50px;
+    height: 50px;
+}
+.footer-section1-item{
+    text-align: center;
+    line-height: 50px;
+}
+.info-footer-section1{
+    display: flex;
+}
+.info-footer-section1-left{
+    width: 100%;
+}
+.info-footer-section1-right{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;   
+}
+.info-footer-section1-right > button{
+    margin-top: 30px;
+    margin-right: 20px;
+}
+.info-footer-section1-left > *{
+    margin-top: 30px;
+}
