--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ img{
     padding: 0 10px;
 }
 .container{
-    width: 1000px;
+    max-width: 1000px;
     margin: auto;
 }
 a{
@@ -56,11 +56,18 @@ li{
     margin-left: 10px;
     margin-right: 10px;
 }
+.header-top-left > img{
+    width: 25%;
+}
 .header-top-right > * {
     margin-left: 10px;
     margin-right: 10px;
 }
 /* Header-bottom */
+.container-big{
+    max-width: 1200px;
+    margin: 0 auto;
+}
 .header-container-bottom{
     background-color: lightskyblue;
     width: 100%;
@@ -239,6 +246,8 @@ label{
 .small-four-container{
     display: flex;
     flex-wrap: wrap;
+    width: calc(100% / 3);
+    height: calc(100vw / 3);
 }
 .partner{
     width: calc(100% / 2);
@@ -249,7 +258,9 @@ label{
 }
 .only-one-container{
     background-color: beige;
-    width: 50%;
+  /* width: 50%;   */
+  width: calc(100% / 3);
+  height: calc(100vw / 3);
 }
 .only-one-container > *{
     width: 50%;
@@ -265,9 +276,12 @@ label{
     width: 80%;
 }
 .partner > img{
-    width: calc(100vw / 8);
-    height: calc(100vw / 8);
+    width: 80%;
+   
     filter: invert(100%);
+}
+.partner {
+    
 }
 .background-blu{
     background-color: blue;
